--- a/services/config-server/src/main/resources/configurations/booking-service.yml
+++ b/services/config-server/src/main/resources/configurations/booking-service.yml
@@ -27,6 +27,9 @@ spring:
       properties:
         spring.json.trusted.packages: '*'
         spring.json.type.mapping: payment:com.nguyenhan.hdv.model.Payment
+  main:
+    allow-bean-definition-overriding: true
+
 server:
   port: 8082
 eureka:
