--- a/services/booking-service/src/main/resources/application.yml
+++ b/services/booking-service/src/main/resources/application.yml
@@ -1,37 +1,12 @@
 spring:
   application:
     name: booking-service
-#  datasource:
-#    url: jdbc:postgresql://localhost:5432/booking-service-hdv
-#    username: postgres
-#    password: han1662003
-#    driver-class-name: org.postgresql.Driver
-#  jpa:
-#    hibernate:
-#      ddl-auto: update # Options: create, create-drop, update, validate, none
-#    show-sql: true
-#    properties:
-#      hibernate:
-#        dialect: org.hibernate.dialect.PostgreSQLDialect
-#        format_sql: true
   config:
     import: optional:configserver:http://localhost:8888
-#  kafka:
-#    producer:
-#      bootstrap-servers: localhost:9092
-#      key-serializer: org.apache.kafka.common.serialization.StringSerializer
-#      value-serializer: org.apache.kafka.common.serialization.StringSerializer
-#    consumer:
-#      bootstrap-servers: localhost:9092
-#      group-id: booking-group
-#      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-#      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-#server:
-#  port: 8082
-#eureka:
-#  client:
-#    service-url:
-#      defaultZone: http://localhost:8761/eureka/ # Eureka Server URL
-#      register-with-eureka: true
-#      fetch-registry: true
 
+---
+spring:
+  config:
+    import: configserver:http://config-server:8888
+  activate:
+    on-profile: docker
