--- a/services/discovery-service/src/main/resources/application.yml
+++ b/services/discovery-service/src/main/resources/application.yml
@@ -3,3 +3,10 @@ spring:
     import: optional:configserver:http://localhost:8888
   application:
     name: discovery-service
+
+---
+spring:
+  config:
+    import: configserver:http://config-server:8888
+  activate:
+    on-profile: docker
