--- a/services/movie-service/pom.xml
+++ b/services/movie-service/pom.xml
@@ -11,6 +11,7 @@
     <groupId>com.nguyenhan</groupId>
     <artifactId>movie-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
     <name>movie-service</name>
     <description>movie-service</description>
     <url/>
@@ -117,7 +118,6 @@
                         <exclude>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
-                            <version>1.18.36</version>
                         </exclude>
                     </excludes>
                 </configuration>
