--- a/services/notification-service/pom.xml
+++ b/services/notification-service/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.nguyenhan</groupId>
 	<artifactId>notification-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>notification-service</name>
 	<description>notification-service</description>
 	<url/>
