--- a/services/payment-service/pom.xml
+++ b/services/payment-service/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.nguyenhan</groupId>
 	<artifactId>payment-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>payment-service</name>
 	<description>payment-service</description>
 	<url/>
