--- a/services/user-service/pom.xml
+++ b/services/user-service/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.nguyenhan</groupId>
 	<artifactId>user-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>user-service</name>
 	<description>user-service</description>
 	<url/>
@@ -104,7 +105,6 @@
 						<exclude>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
-							<version>1.18.36</version>
 						</exclude>
 					</excludes>
 				</configuration>
