--- a/services/config-server/src/main/resources/configurations/user-service.yml
+++ b/services/config-server/src/main/resources/configurations/user-service.yml
@@ -4,23 +4,29 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
-    show-sql: 'true'
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
+        format_sql: true
   datasource:
     password: han1662003
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
-    url: jdbc:mysql://localhost:3306/user_service_hdv
+    url: jdbc:mysql://mysql-hdv:3306/movie_service_hdv?createDatabaseIfNotExist=true
   data:
     jpa:
       repositories:
         enabled: true
 
-
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/ # Eureka Server URL
+      defaultZone: http://discovery-service:8761/eureka/ # Eureka Server URL
       register-with-eureka: true
       fetch-registry: true
+  instance:
+    prefer-ip-address: true
+
 server:
   port: 8081
