--- a/services/config-server/src/main/resources/configurations/api-gateway.yml
+++ b/services/config-server/src/main/resources/configurations/api-gateway.yml
@@ -34,6 +34,10 @@ spring:
           uri: lb:http://NOTIFICATION-SERVICE
           predicates:
             - Path=/notifications/**
+        - id: roomseat-service
+          uri: lb:http://ROOMSEAT-SERVICE
+          predicates:
+            - Path=/roomseats/**
       globalcors:
         cors-configurations:
           '[/**]': # Applies to all paths
