--- a/frontend/movie-ticket-booking/Dockerfile
+++ b/frontend/movie-ticket-booking/Dockerfile
@@ -12,11 +12,7 @@ RUN npm install
 # Copy source code
 COPY . .
 
-# Set environment variables
-ENV NODE_ENV=production
-ENV REACT_APP_API_URL=http://localhost:8080/api
-
-# Build the app
+# Build the application
 RUN npm run build
 
 # Production stage
@@ -28,10 +24,6 @@ COPY --from=build /app/build /usr/share/nginx/html
 # Copy nginx configuration
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-# Add healthcheck
-HEALTHCHECK --interval=30s --timeout=3s \
-  CMD wget --no-verbose --tries=1 --spider http://localhost:80/ || exit 1
-
 EXPOSE 80
 
-CMD ["nginx", "-g", "daemon off;"] 
+CMD ["nginx", "-g", "daemon off;"]
